traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:9: error: value and is not a member of Boolean
    if (getX()+1==L and getY()%2 !=0){
                    ^